infrastructure/base/default-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-nginx-backend
  namespace: infrastructure
  labels:
    app.kubernetes.io/name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
          requests:
            memory: "32Mi"
            cpu: "0"
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
        - name: nginx-confd
          mountPath: /etc/nginx/conf.d
        readinessProbe:
          failureThreshold: 10
          initialDelaySeconds: 0
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 10
          initialDelaySeconds: 0
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 1
      volumes:
      - name: nginx-html
        configMap:
          name: nginx-html
      - name: nginx-confd
        configMap:
          name: nginx-config
      - name: html
        emptyDir: {}
