infrastructure/base/default-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-backend
  namespace: infrastructure
  labels:
    app.kubernetes.io/name: nginx
spec:
  internalTrafficPolicy: Cluster
  selector:
    app.kubernetes.io/name: nginx
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  type: ClusterIP
