infrastructure/base/default-backend/default-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: default-backend
  namespace: infrastructure
  labels:
    homelab.wahoo.li/exposure: public
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
  - name: envoy-gw
    namespace: envoy-gateway-system
  - name: envoy-gw-private
    namespace: envoy-gateway-system
    sectionName: wahooli-https
  - name: envoy-gw-private
    namespace: envoy-gateway-system
    sectionName: absolutistit-https
  hostnames:
  - "*.${domain_wahoo_li:=wahoo.li}"
  - "*.${domain_absolutist_it:=absolutist.it}"
  rules:
  - backendRefs:
    - name: default-backend
      port: 80
