infrastructure/base/default-backend/overrides-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: override-vault-admin
  namespace: infrastructure
  labels:
    homelab.wahoo.li/exposure: public
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
  - name: envoy-gw
    namespace: envoy-gateway-system
  - name: envoy-gw-private
    namespace: envoy-gateway-system
    sectionName: wahooli-https
  hostnames:
  - "vault.${domain_wahoo_li:=wahoo.li}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /admin
    backendRefs:
    - name: default-backend
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: override-paperless-admin
  namespace: infrastructure
  labels:
    homelab.wahoo.li/exposure: public
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
  - name: envoy-gw
    namespace: envoy-gateway-system
  - name: envoy-gw-private
    namespace: envoy-gateway-system
    sectionName: wahooli-https
  hostnames:
  - "paperless.${domain_wahoo_li:=wahoo.li}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /admin
    backendRefs:
    - name: default-backend
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: override-jellyfin-metrics
  namespace: infrastructure
  labels:
    homelab.wahoo.li/exposure: public
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
  - name: envoy-gw
    namespace: envoy-gateway-system
  - name: envoy-gw-private
    namespace: envoy-gateway-system
    sectionName: wahooli-https
  hostnames:
  - "jellyfin.${domain_wahoo_li:=wahoo.li}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /metrics
    backendRefs:
    - name: default-backend
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: override-overseerr-setup
  namespace: infrastructure
  labels:
    homelab.wahoo.li/exposure: public
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
  - name: envoy-gw
    namespace: envoy-gateway-system
  - name: envoy-gw-private
    namespace: envoy-gateway-system
    sectionName: wahooli-https
  hostnames:
  - "overseerr.${domain_wahoo_li:=wahoo.li}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /setup
    backendRefs:
    - name: default-backend
      port: 80
