infrastructure/base/default-backend/overrides-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/custom-http-errors: "404"
    external-dns.alpha.kubernetes.io/exclude: "true"
  name: overrides-ingress
  namespace: infrastructure
spec:
  ingressClassName: nginx
  rules:
  - host: vault.${domain_wahoo_li:=wahoo.li}
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: default-backend
            port:
              number: 80
  - host: paperless.${domain_wahoo_li:=wahoo.li}
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: default-backend
            port:
              number: 80
  - host: jellyfin.${domain_wahoo_li:=wahoo.li}
    http:
      paths:
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: default-backend
            port:
              number: 80
  - host: overseerr.${domain_wahoo_li:=wahoo.li}
    http:
      paths:
      - path: /setup
        pathType: Prefix
        backend:
          service:
            name: default-backend
            port:
              number: 80
