infrastructure/base/default-backend/robots-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robots-txt
  namespace: infrastructure
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/custom-http-errors: "404"
    nginx.ingress.kubernetes.io/access-log-filter: "true"
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "${domain_wahoo_li:=wahoo.li}"
    http: &ingressPaths
      paths:
      - path: "/robots.txt"
        pathType: ImplementationSpecific
        backend:
          service:
            name: default-backend
            port:
              number: 80
      - path: "/ads.txt"
        pathType: ImplementationSpecific
        backend:
          service:
            name: default-backend
            port:
              number: 80
  - host: "auth.${domain_wahoo_li:=wahoo.li}"
    http: *ingressPaths
  - host: "ombi.${domain_wahoo_li:=wahoo.li}"
    http: *ingressPaths
  - host: "paperless.${domain_wahoo_li:=wahoo.li}"
    http: *ingressPaths
  - host: "tautulli.${domain_wahoo_li:=wahoo.li}"
    http: *ingressPaths
  - host: "sonarr.${domain_wahoo_li:=wahoo.li}"
    http: *ingressPaths
  - host: "radarr.${domain_wahoo_li:=wahoo.li}"
    http: *ingressPaths
  - host: "bazarr.${domain_wahoo_li:=wahoo.li}"
    http: *ingressPaths
  - host: "grafana.${domain_wahoo_li:=wahoo.li}"
    http: *ingressPaths
  - host: "overseerr.${domain_wahoo_li:=wahoo.li}"
    http: *ingressPaths
  - host: "jellyfin.${domain_wahoo_li:=wahoo.li}"
    http: *ingressPaths
  - host: "plex.${domain_wahoo_li:=wahoo.li}"
    http: *ingressPaths
  - host: "vault.${domain_wahoo_li:=wahoo.li}"
    http: *ingressPaths
