infrastructure/base/default-backend/static-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: static-backend
  namespace: infrastructure
  labels:
    homelab.wahoo.li/exposure: public
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
  - name: envoy-gw
    namespace: envoy-gateway-system
  - name: envoy-gw-private
    namespace: envoy-gateway-system
    sectionName: wahooli-https
  hostnames:
  - "static.${domain_wahoo_li:=wahoo.li}"
  rules:
  - backendRefs:
    - name: default-backend
      port: 80
